# src/controllers/auth.controller.ts
@@ -30,6 +30,9 @@ const registerValidateSchema = Yup.object({
 });
 
 export default {
+    /**
+        #swagger.tags = ['Auth'] 
+     */
     async register(req: Request, res: Response) {
         const { fullName, username, email, password, confirmPassword } = 
             req.body as unknown as TRegister;
@@ -66,6 +69,7 @@ export default {
 
     async login(req: Request, res: Response) {
         /** 
+            #swagger.tags = ['Auth']
             #swagger.requestBody = {
                 required: true,
                 schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -127,6 +131,7 @@ export default {
 
     async me (req: IReqUser, res: Response) {
         /** 
+            #swagger.tags = ['Auth']
             #swagger.security = [{
                 "bearerAuth": []
             }]
